--- a/app/src/main/res/layout/layout_botton_sheet.xml
+++ b/app/src/main/res/layout/layout_botton_sheet.xml
@@ -59,14 +59,16 @@
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:paddingLeft="10dp"
         android:layout_marginBottom="20dp"
         android:background="#f8f8ff"
+        android:gravity="center"
+        android:paddingLeft="10dp"
         android:paddingTop="10dp"
         android:text="Añadir nueva dirección"
         android:textColor="@color/pinkColor"
+
         android:textSize="15sp"
-        android:drawableStart="@drawable/anadir"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
