--- a/app/src/main/res/layout/layout_datos_fac.xml
+++ b/app/src/main/res/layout/layout_datos_fac.xml
@@ -11,9 +11,9 @@
     <TextView
         android:layout_width="60dp"
         android:layout_height="5dp"
-        android:background="@drawable/iconito"
-android:layout_marginLeft="155dp"
+        android:layout_marginLeft="155dp"
         android:layout_marginTop="2dp"
+        android:background="@drawable/iconito"
         android:gravity="center"
 
         />
@@ -29,35 +29,46 @@ android:layout_marginLeft="155dp"
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="250dp"
             android:layout_height="30dp"
-            android:textColor="@color/black"
             android:layout_marginLeft="100dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:text="Administrar Contribuyentes"
+            android:textColor="@color/black"
             android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/contenedorContribuyentes"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:focusableInTouchMode="true"
             android:orientation="horizontal"
-            tools:listitem="@layout/item_contribuyentes"
-            android:focusableInTouchMode="true"/>
+            tools:listitem="@layout/item_contribuyentes" />
+
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnContri"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:drawableStart="@drawable/anadir"
-            android:paddingTop="15dp"
-            android:text="Añadir Contribuyente"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="#f8f8ff"
+            android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:text="Añadir Datos de Facturaciòn"
             android:textColor="@color/pinkColor"
-            android:textSize="15sp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="30dp"
-            android:background="@drawable/search_edittext_background"
-            />
-    </LinearLayout>
 
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.906" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
