--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="190dp"
-    android:layout_height="210dp"
+    android:layout_height="190dp"
     android:layout_marginTop="10dp"
     app:cardCornerRadius="25dp"
     app:cardUseCompatPadding="true">
@@ -29,8 +29,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.309"
-            tools:srcCompat="@tools:sample/avatars"
-            app:shapeAppearanceOverlay="@style/round"/>
+            app:shapeAppearanceOverlay="@style/round"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/ItemName"
