--- a/app/src/main/res/layout/fragment_detalle_pedido.xml
+++ b/app/src/main/res/layout/fragment_detalle_pedido.xml
@@ -31,7 +31,7 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardView2"
                         android:layout_width="match_parent"
-                        android:layout_height="180dp"
+                        android:layout_height="150dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="10dp"
                         app:cardCornerRadius="25dp"
@@ -62,14 +62,13 @@
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintVertical_bias="0.322" />
+                                app:layout_constraintVertical_bias="0.45" />
 
                             <TextView
                                 android:id="@+id/textView12"
                                 android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="24dp"
-                                android:layout_marginBottom="5dp"
                                 android:text="Descuento"
                                 android:textColor="@color/textColorPrimary2"
                                 android:textSize="16sp"
@@ -164,6 +163,7 @@
                                 android:text="0"
                                 android:textColor="@color/textColorPrimary2"
                                 android:textSize="16sp"
+                                android:visibility="gone"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -175,6 +175,7 @@
                                 android:text="Delivery"
                                 android:textColor="@color/textColorPrimary2"
                                 android:textSize="16sp"
+                                android:visibility="gone"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/txt_delivery_compra"
                                 app:layout_constraintHorizontal_bias="0.0"
@@ -191,9 +192,9 @@
                         android:id="@+id/textView7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Detalles de la compra"
                         android:layout_marginLeft="20dp"
-                        android:textSize="20sp"/>
+                        android:text="Detalles de la compra"
+                        android:textSize="20sp" />
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardView1"
@@ -238,8 +239,8 @@
                                 android:id="@+id/imageView1"
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
-                                android:layout_marginRight="20dp"
                                 android:layout_marginTop="30dp"
+                                android:layout_marginRight="20dp"
                                 android:src="@drawable/flecha_hacia_abajo"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
@@ -260,10 +261,10 @@
                                 android:id="@+id/contenedorMetodoEntrega"
                                 android:layout_width="300dp"
                                 android:layout_height="130dp"
+                                android:layout_marginTop="15dp"
                                 android:orientation="horizontal"
                                 android:paddingLeft="20dp"
                                 android:paddingTop="20dp"
-                               android:layout_marginTop="15dp"
                                 android:paddingRight="30dp"
                                 android:visibility="gone"
                                 app:layout_constraintBottom_toBottomOf="parent"
@@ -369,7 +370,7 @@
                                 android:paddingTop="10dp"
                                 android:paddingRight="30dp"
                                 android:visibility="gone"
-                                 app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toBottomOf="@+id/textView10"
@@ -518,7 +519,7 @@
                                     app:layout_constraintTop_toTopOf="parent"
                                     app:layout_constraintVertical_bias="0.100000024" />
 
-                              </androidx.constraintlayout.widget.ConstraintLayout>
+                            </androidx.constraintlayout.widget.ConstraintLayout>
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -526,9 +527,9 @@
                         android:id="@+id/textView8"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Método de pago"
                         android:layout_marginLeft="20dp"
-                        android:textSize="20sp"/>
+                        android:text="Método de pago"
+                        android:textSize="20sp" />
                     />
 
                     <androidx.cardview.widget.CardView
@@ -550,10 +551,11 @@
 
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/contenedorDatosFacturacion"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="120dp"
                                 android:orientation="horizontal"
-                                android:paddingLeft="20dp"
+                                android:paddingLeft="40dp"
+
                                 android:paddingTop="10dp"
                                 android:paddingRight="30dp"
                                 android:visibility="gone"
@@ -720,10 +722,10 @@
                                 android:id="@+id/check5"
                                 android:layout_width="35dp"
                                 android:layout_height="35dp"
+                                android:layout_marginTop="28dp"
                                 android:layout_marginEnd="16dp"
                                 android:src="@drawable/comprobado_adobe_express"
                                 android:visibility="gone"
-                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/imageView5"
                                 app:layout_constraintTop_toTopOf="parent" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -834,6 +836,7 @@
                     android:textSize="17sp"
                     app:backgroundTint="@color/pinkColor"
                     app:shapeAppearanceOverlay="@style/Button4" />
+
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnPaypal"
                     android:layout_width="150dp"
@@ -849,6 +852,7 @@
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="16sp"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.92"
