--- a/app/src/main/res/layout/item_historial.xml
+++ b/app/src/main/res/layout/item_historial.xml
@@ -36,17 +36,22 @@
 
         <TextView
             android:id="@+id/txt_estado_historial"
-            android:layout_width="200dp"
-            android:layout_height="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="18dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/estado_proceso"
             android:maxLines="1"
-            android:text=" 5.98"
-            android:textColor="@color/black"
+            android:text="En proceso"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+
+            android:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.366"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textView17"
             app:layout_constraintTop_toBottomOf="@+id/txt_total_historial"
             app:layout_constraintVertical_bias="0.272" />
 
@@ -100,6 +105,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_fecha_historial"
             app:layout_constraintVertical_bias="0.204" />
+
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Estado:"
+            android:textColor="@color/textColorSecondary"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.19"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.89" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
