--- a/app/src/main/res/layout/fragment_detalle_historial.xml
+++ b/app/src/main/res/layout/fragment_detalle_historial.xml
@@ -51,11 +51,12 @@
                 android:textColor="@color/textColorSecondary"
                 android:textSize="12sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/txt_estado_cabecera"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.368"
+                app:layout_constraintHorizontal_bias="0.36"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_fecha_cabecera" />
+                app:layout_constraintTop_toBottomOf="@+id/txt_fecha_cabecera"
+                app:layout_constraintVertical_bias="0.24000001" />
 
             <TextView
                 android:id="@+id/txt_fecha_cabecera"
@@ -67,28 +68,49 @@
                 android:textColor="@color/textColorSecondary"
                 android:textSize="12sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/txt_total_cabecera"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.371"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.17000002" />
+                app:layout_constraintVertical_bias="0.13999999" />
 
             <TextView
-                android:id="@+id/txt_estado_cabecera"
-                android:layout_width="250dp"
+                android:id="@+id/sss"
+                android:layout_width="45dp"
                 android:layout_height="15dp"
                 android:maxLines="1"
-                android:text=" 5.98"
-                android:textColor="@color/black"
+                android:text="Estado:"
+                android:textColor="@color/textColorSecondary"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.37"
+                app:layout_constraintHorizontal_bias="0.13"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_total_cabecera"
-                app:layout_constraintVertical_bias="0.77" />
+                app:layout_constraintVertical_bias="0.57" />
+
+            <TextView
+                android:id="@+id/txt_estado_historial_detalle"
+                android:layout_width="wrap_content"
+                android:layout_height="18dp"
+                android:background="@drawable/estado_proceso"
+                android:maxLines="1"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="En proceso"
+
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/sss"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.96" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
