--- a/app/src/main/res/layout/fragment_somos.xml
+++ b/app/src/main/res/layout/fragment_somos.xml
@@ -16,40 +16,40 @@
             android:id="@+id/imageView6"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_marginRight="80dp"
             android:layout_marginLeft="80dp"
             android:layout_marginTop="20dp"
-            app:srcCompat="@drawable/prodiser"/>
+            android:layout_marginRight="80dp"
+            app:srcCompat="@drawable/prodiser" />
 
         <TextView
             android:id="@+id/textView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:textSize="16sp"
-
             android:layout_marginTop="50dp"
-            android:text="        Somos una empresa dedicada a la fabricación y comercialización de productos de limpieza e higiene, brindamos al cliente satisfacción plena, ofreciendo productos de calidad, con un servicio eficiente y eficaz en el momento oportuno." />
+            android:layout_marginRight="20dp"
+
+            android:text="        Somos una empresa dedicada a la fabricación y comercialización de productos de limpieza e higiene, brindamos al cliente satisfacción plena, ofreciendo productos de calidad, con un servicio eficiente y eficaz en el momento oportuno."
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:textSize="16sp"
             android:layout_marginTop="40dp"
-            android:text="       Nuestra visión es ser una empresa líder y reconocida por su alto estándar de calidad en el rubro dentro del mercado nacional."/>
+            android:layout_marginRight="20dp"
+            android:text="       Nuestra visión es ser una empresa líder y reconocida por su alto estándar de calidad en el rubro dentro del mercado nacional."
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textView13"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:gravity="center"
             android:layout_marginTop="40dp"
-            android:text="Fabricamos y distribuimos" />
+            android:gravity="center"
+            android:text="Fabricamos y distribuimos"
+            android:textSize="15sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,15 +61,35 @@
                 android:id="@+id/imageView3"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                app:srcCompat="@drawable/verapa"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginRight="20dp"
+                app:srcCompat="@drawable/verapa" />
 
             <ImageView
                 android:id="@+id/imageView9"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                app:srcCompat="@drawable/plus"/>
-        </LinearLayout>
+                app:srcCompat="@drawable/plus" />
 
-    </LinearLayout>
+        </LinearLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/instagram"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="20dp"
+        app:srcCompat="@drawable/a"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="120dp"/>
+
+    <ImageView
+        android:id="@+id/face"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:srcCompat="@drawable/face"
+        android:layout_marginTop="70dp"/>
+</LinearLayout>
+         </LinearLayout>
 </FrameLayout>
